<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballscoring.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/team_a_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Pick_a_team_black_background"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/header_logo"
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/header_logo_height"
                    android:layout_marginTop="@dimen/logo_top_margin"
                    android:layout_marginLeft="@dimen/logo_left_margin"
                    android:layout_marginRight="@dimen/logo_right_margin"
                    android:layout_marginBottom="@dimen/logo_bottom_margin"
                    android:layout_gravity="center"
                    android:src="@drawable/caa_logo"/>

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/colleges_array"
                    android:prompt="@string/team_prompt"
                    android:spinnerMode="dropdown"
                    android:theme="@style/SpinnerMenu" />


                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/initial_score"
                    android:textColor="@color/score_color"
                    android:textSize="@dimen/score_text_size" />

                <ImageView
                    android:id="@+id/team_a_logo"
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/logo_bottom_margin"
                    android:layout_marginLeft="@dimen/logo_left_margin"
                    android:layout_marginRight="@dimen/logo_right_margin"
                    android:layout_marginTop="@dimen/logo_top_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/choose_a_team" />

                <Button
                    android:id="@+id/team_a_touchdown"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:onClick="plusSixPointsForTeamA"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/team_a_extra_point"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusOnePointForTeamA"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/team_a_conversion"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusTwoPointsForTeamA"
                    android:text="@string/conversion" />

                <Button
                    android:id="@+id/team_a_field_goal"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusThreePointsForTeamA"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/team_a_safety"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_bottom_margin"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusTwoPointsForTeamA"
                    android:text="@string/safety" />


            </LinearLayout>

            <View
                android:layout_width="@dimen/divider_width"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/team_b_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Pick_a_team_black_background"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/header_text_height"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/logo_top_margin"
                    android:layout_marginLeft="@dimen/header_left_margin"
                    android:layout_marginRight="@dimen/header_right_margin"
                    android:layout_marginBottom="@dimen/logo_bottom_margin"
                    android:layout_gravity="center"
                    android:text="@string/header"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="@color/header_text_color"
                    android:textSize="@dimen/header_text_size" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/colleges_array"
                    android:prompt="@string/team_prompt"
                    android:spinnerMode="dropdown"
                    android:theme="@style/SpinnerMenu" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/initial_score"
                    android:textColor="@color/score_color"
                    android:textSize="@dimen/score_text_size" />

                <ImageView
                    android:id="@+id/team_b_logo"
                    android:layout_width="@dimen/logo_width"
                    android:layout_height="@dimen/logo_height"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/logo_bottom_margin"
                    android:layout_marginLeft="@dimen/logo_left_margin"
                    android:layout_marginRight="@dimen/logo_right_margin"
                    android:layout_marginTop="@dimen/logo_top_margin"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/choose_a_team" />

                <Button
                    android:id="@+id/team_b_touchdown"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:onClick="plusSixPointsForTeamB"
                    android:text="@string/touchdown" />

                <Button
                    android:id="@+id/team_b_extra_point"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusOnePointForTeamB"
                    android:text="@string/extra_point" />

                <Button
                    android:id="@+id/team_b_conversion"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusTwoPointsForTeamB"
                    android:text="@string/conversion" />

                <Button
                    android:id="@+id/team_b_field_goal"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusThreePointsForTeamB"
                    android:text="@string/field_goal" />

                <Button
                    android:id="@+id/team_b_safety"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_bottom_margin"
                    android:layout_marginLeft="@dimen/button_left_margin"
                    android:layout_marginRight="@dimen/button_right_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
                    android:onClick="plusTwoPointsForTeamB"
                    android:text="@string/safety" />


            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/reset_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:onClick="resetScoreForBothTeams"
            android:text="@string/reset_score"
            android:theme="@style/PickATeam.Button" />
    </RelativeLayout>
</ScrollView>
